--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                     <ul class="nav navbar-nav user_menu">
                         <li>
@@ -113,7 +115,7 @@
                     <ul class="nav navbar-nav main_nav hidden-xs">
                         <li><a class="active" href="#">HOME</a></li>
                         <li><a href="#">VIJESTI</a></li>
-                        <li><a href="#">Kapitalt</a></li>
+                        <li><a href="#">Kapital</a></li>
                         <li><a href="#">Eu</a></li>
                         <li><a href="#">Najave</a></li>
                         <li><a href="#">Ličnosti</a></li>
@@ -1337,7 +1339,7 @@
         </div>
         -->
         <div class="container-fluid footer-cta">
-            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BEPLATNO!</h1>
+            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BESPLATNO!</h1>
             <a class="footer-cta-button">REGISTRUJ SE</a>
         </div>
         <div class="container-fluid footer-menu">
@@ -1378,7 +1380,7 @@
                         </ul>
                         <ul class="col-sm-6 col-md-6 nopadding footer sub_items">
                             <li>
-                                <a href="#">Tender</a>
+                                <a href="#">Tenderi</a>
                             </li>
                             <li>
                                 <a href="#">Registar</a>
@@ -1416,7 +1418,7 @@
                     <div class="col-md-3 tagovi">
                         <li class="footer nopadding subheader"><a href="#">POPULARNI TAGOVI</a></li>
                         <a href="#">MARKETING</a>
-                        <a href="#">INVESTICJE</a>
+                        <a href="#">INVESTICIJE</a>
                         <a href="#">FAQ</a>
                         <a href="#">VIJESTI</a>
                         <a href="#">TENDERI</a>
