--- a/tenderi-pretraga.html
+++ b/tenderi-pretraga.html
@@ -75,10 +75,13 @@
                     </ul>
                     <ul class="nav navbar-nav social_icons hidden-xs visible-lg">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-viber" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                     <ul class="nav navbar-nav user_menu">
                         <li>
@@ -351,121 +354,121 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-xs-12 col-md-12">
                     <h1 class="card-naslov-vijesti">Kategorije tendera</h1>
                     <div class="red-kategorija remargin">
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="obrazovanje">Obrazovanje</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="energetika">Energetika</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="hemija">Hemijski proizvodi</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="gradevina">Građevina i nekretnine</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="zdravstvo">Zdravstvo</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="poljop">Poljoprivreda i mehanizacija</p>
                             </div>
                         </div>
                     </div>
                     <div class="red-kategorija remargin">
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="tekstil">Tekstil i asesoari</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="okolis">Zaštita okoliša, sanitarne i komunalne usluge</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="sport">Sport, kultura, umjetnost</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="telekom">Telekomunikacije</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="it">IT i uredska oprema</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="elektronika">Elektronika</p>
                             </div>
                         </div>
                     </div>
                     <div class="red-kategorija remargin">
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="istrazivanje">Istraživanje i razvoj, poslovne usluge</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="namjestaj">Namještaj i aparati</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="rudarstvo">Rudarstvo i metali</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="transport">Transport</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="industrija">Industrija</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="turizam">Turizam</p>
                             </div>
                         </div>
                     </div>
                     <div class="red-kategorija remargin">
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="stamparije">Štamparije i izdavaštvo</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="finansije">Finansije i osiguranje</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="odbrana">Odbrana, sigurnost i javna uprava</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p class="ostalo">Ostalo</p>
                             </div>
@@ -473,76 +476,76 @@
 
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-xs-12 col-md-12">
                     <h1 class="card-naslov-vijesti">Brza pretraga tendera</h1>
                     <div class="red-kategorija remargin">
-                        <div class="col-md-2 kategorija-tendera brza">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera brza">
                             <div>
                                 <p>NABAVKE</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera brza">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera brza">
                             <div>
                                 <p>IZMJENE</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera brza">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera brza">
                             <div>
                                 <p>PONIŠTENJA</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera brza">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera brza">
                             <div>
                                 <p>EU i MEĐUNARODNI TENDERI</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera brza">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera brza">
                             <div>
                                 <p>PRODAJA POTRAŽIVANJA</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-xs-12 col-md-12">
                     <h1 class="card-naslov-vijesti">Dodatne kategorije</h1>
                     <div class="red-kategorija remargin dodatne">
-                        <div class="col-md-2 kategorija-tendera ">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera ">
                             <div>
                                 <p>Licitacije/nekretnine</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera ">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera ">
                             <div>
                                 <p>Javni pozivi,<br> konkursi, oglasi</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Privatizacije berze</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Skupštine</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Regulacioni planovi</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Stečaj <br>- prodaja imovine <br>- kompanije u stečaju</p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Odluke o pokretanju postupaka
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-2 kategorija-tendera">
+                        <div class="col-xs-12 col-sm-6 col-md-2 kategorija-tendera">
                             <div>
                                 <p>Plan nabavki</p>
                             </div>
@@ -630,7 +633,7 @@
                                 </div>
                                 <div class="col-sm-12">
                                     <a href="#" class="card-button" style="margin-right:auto;text-align: center;    margin-top: 30px;" onclick="$(this).closest('form').submit()">
-                                        <span class="card-button-tekst" style="font-size: x-large;">Izračunaj</span></a>
+                                        <span class="card-button-tekst" style="font-size: x-large;">Pretraži</span></a>
                                 </div>
                             </form>
                         </div>
@@ -914,7 +917,7 @@
         </div>
         -->
         <div class="container-fluid footer-cta">
-            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BEPLATNO!</h1>
+            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BESPLATNO!</h1>
             <a class="footer-cta-button">REGISTRUJ SE</a>
         </div>
         <div class="container-fluid footer-menu">
@@ -955,7 +958,7 @@
                         </ul>
                         <ul class="col-sm-6 col-md-6 nopadding footer sub_items">
                             <li>
-                                <a href="#">Tender</a>
+                                <a href="#">Tenderi</a>
                             </li>
                             <li>
                                 <a href="#">Registar</a>
@@ -993,7 +996,7 @@
                     <div class="col-md-3 tagovi">
                         <li class="footer nopadding subheader"><a href="#">POPULARNI TAGOVI</a></li>
                         <a href="#">MARKETING</a>
-                        <a href="#">INVESTICJE</a>
+                        <a href="#">INVESTICIJE</a>
                         <a href="#">FAQ</a>
                         <a href="#">VIJESTI</a>
                         <a href="#">TENDERI</a>
