--- a/tenderi.html
+++ b/tenderi.html
@@ -30,7 +30,6 @@
 
     <!-- Custom styles for this template -->
     <link href="./css/main-style.css" rel="stylesheet">
-    <link href="./css/owl.carousel.css" rel="stylesheet">
 
     <script src="./js/ie-emulation-modes-warning.js"></script>
 
@@ -75,10 +74,13 @@
                     </ul>
                     <ul class="nav navbar-nav social_icons hidden-xs visible-lg">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-viber" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                     <ul class="nav navbar-nav user_menu">
                         <li>
@@ -99,7 +101,7 @@
                             </a>
                         </li>
                         <li><a href="#">Prijava</a></li>
-                        <li><a class="tenderi" href="#">Testiraj besplatno</a></li>
+                        <li><a href="#" class="tenderi">Testiraj besplatno</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
@@ -545,7 +547,6 @@
 
 
     </section>
-
     <!--- footer sekcija -->
     <section id="footer">
         <!--- Footer newsletter
@@ -560,7 +561,7 @@
         </div>
         -->
         <div class="container-fluid footer-cta">
-            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BEPLATNO!</h1>
+            <h1> <span>Poslujte bolje!</span> TESTIRAJTE BESPLATNO!</h1>
             <a class="footer-cta-button">REGISTRUJ SE</a>
         </div>
         <div class="container-fluid footer-menu">
@@ -601,7 +602,7 @@
                         </ul>
                         <ul class="col-sm-6 col-md-6 nopadding footer sub_items">
                             <li>
-                                <a href="#">Tender</a>
+                                <a href="#">Tenderi</a>
                             </li>
                             <li>
                                 <a href="#">Registar</a>
@@ -639,7 +640,7 @@
                     <div class="col-md-3 tagovi">
                         <li class="footer nopadding subheader"><a href="#">POPULARNI TAGOVI</a></li>
                         <a href="#">MARKETING</a>
-                        <a href="#">INVESTICJE</a>
+                        <a href="#">INVESTICIJE</a>
                         <a href="#">FAQ</a>
                         <a href="#">VIJESTI</a>
                         <a href="#">TENDERI</a>
@@ -668,7 +669,6 @@
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
     <script src="./js/imagesLoaded.js"></script>
     <script src="./js/masonry.js"></script>
-    <script src="./js/owl.carousel.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
