Ispravka teksta 'zelite objaviti'

--- a/tenderi.html
+++ b/tenderi.html
@@ -339,7 +339,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 card ">
                         <div class="card-opis-vijesti">
                             <h1 class="card-naslov-vijesti">Najveća baza tendera</h1>
-                            <p><b>Tražite najnovije tendere? Zelite ojaviti tender?</b> <br>Na pravom ste mjestu! Akta tim Vam nudi najbolje mogućnosti za Vaše bolje poslovanje. Detaljna pretraga vam omogućava da nađete tendere koji najviše odgovaraju vašim
+                            <p><b>Tražite najnovije tendere? Želite objaviti tender?</b> <br>Na pravom ste mjestu! Akta tim Vam nudi najbolje mogućnosti za Vaše bolje poslovanje. Detaljna pretraga vam omogućava da nađete tendere koji najviše odgovaraju vašim
                                 potrebama.
                                 <br>
                                 <span style="color:#00B496;"><b>Registrujte se i testirajte besplatno</b></span> sve mogućnosti koje nudimo.</p>
