Footer icons fix, main menu new item, tabs header fix

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <li><a class="active" href="#">HOME</a></li>
                         <li><a href="#">VIJESTI</a></li>
                         <li><a href="#">Kapital</a></li>
+                        <li><a href="#">Investicije</a></li>
                         <li><a href="#">Eu</a></li>
                         <li><a href="#">Najave</a></li>
                         <li><a href="#">Ličnosti</a></li>
