--- a/index.html
+++ b/index.html
@@ -593,66 +593,7 @@
     <section class="investicije">
         <div class="container">
             <h1 class="naslov-kolone ">Investicije</h1>
-            <div class="skroler-novosti-modul">
-                <div class="news-label">Najnovije kapital</div>
-                <div id="skroler-kapital" class="carousel fdi-Carousel kapital slide">
 
-                    <div class="carousel fdi-Carousel kapital slide" id="eventCarousel" data-interval="0">
-                        <div class="carousel-inner onebyone-carosel">
-                            <div class="item active">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                VIJESTI / SVIJET:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                LIČNOSTI / svijet:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                LIČNOSTI / svijet:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="col-md-6">
-                                    <a class="link-novosti" href="#">
-                                        <span class="kategorija-novosti">
-                                                VIJESTI / SVIJET:
-                                            </span>
-                                        <span class="naslov-novosti">
-                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
-                                            </span>
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
-            </div>
             <div class="wrap-kolona remargin">
                 <div class="col-md-8">
                     <div id="kapital-wrap" class=" row">
@@ -830,6 +771,66 @@
         <div class="container">
 
             <h1 class="naslov-kolone ">Kapital</h1>
+            <div class="skroler-novosti-modul">
+                <div class="news-label">INDEXI BERZI</div>
+                <div id="skroler-kapital" class="carousel fdi-Carousel kapital slide">
+
+                    <div class="carousel fdi-Carousel kapital slide" id="eventCarousel" data-interval="0">
+                        <div class="carousel-inner onebyone-carosel">
+                            <div class="item active">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                SASE:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                BLSE:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                BLSE:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                SASE:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
+            </div>
             <div class="wrap-kolona remargin">
                 <div class="col-md-8 ">
                     <div id="vijesti-wrap" class=" row">
