Added "datum isteka". Removed count label on frontpage widgets.

--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@
                                         </a>
                                     </div>
                                 </form>
-                                <div class="card-count-label">
+                                <!-- <div class="card-count-label">
                                     <p>100</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 card card-vijest ">
@@ -680,9 +680,9 @@
                                             <span class="card-button-ikona"><i class="fa fa-ban" aria-hidden="true"></i></span><span class="card-button-tekst">Izračunaj</span></a>
                                     </div>
                                 </form>
-                                <div class="card-count-label">
+                                <!-- <div class="card-count-label">
                                     <p>100</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -719,9 +719,9 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <div class="card-count-label">
+                                <!--   <div class="card-count-label">
                                     <p>100</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
 
@@ -1006,9 +1006,9 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div class="card-count-label">
+                                <!--  <div class="card-count-label">
                                     <p>100</p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
