--- a/tenderi-rezultat-pretrage.html
+++ b/tenderi-rezultat-pretrage.html
@@ -355,9 +355,23 @@
                                             <label class="cek pola">
                                                 <input type="date" class="form-control datepick akordion-input" placeholder="">
                                            </label>
-                                            <span class="form-control-feedback ">
-                                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                                            </span>
+
+                                            <button type="submit" class="btn btn-filter-refresh">
+                                                Osvježi pretragu <i class="fa fa-repeat"></i> 
+                                            </button>
+                                        </div>
+                                        <li class="collapsed" data-target="#datumIstekaTendera" data-toggle="collapse">
+                                            <a href="#">
+                                                <strong>Datum isteka</strong> <span class="arrow"></span></a>
+                                        </li>
+                                        <div id="datumIstekaTendera" class="sub-menu collapse">
+                                            <label class="cek pola">
+                                                <input type="date" class="form-control datepick akordion-input" placeholder="">
+                                           </label>
+                                            <label class="cek pola">
+                                                <input type="date" class="form-control datepick akordion-input" placeholder="">
+                                           </label>
+
                                             <button type="submit" class="btn btn-filter-refresh">
                                                 Osvježi pretragu <i class="fa fa-repeat"></i> 
                                             </button>
