Added sharing popup to article top

--- a/article.html
+++ b/article.html
@@ -430,16 +430,25 @@
 
                             </div> -->
                         </div>
-                        <div class="card-opis-vijesti">
+                        <div class="card-opis-vijesti article-vijest">
                             <p class="card-kategorija">Vijesti / SVIJET</p>
                             <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
                             <div class="separator"></div>
                             <p class="toolbarVijesti">
+                                <div id="popover-content1" class="hide">
+                                    <ul class="popovermenu">
+                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                    </ul>
+                                </div>
                                 <span class="vijestiInfo">
                                 <span class="datumVijesti">15.01.2017.</span> / <span class="autorVijesti">Autor:</span> <span id="imeiprezimeautora">Ime i prezime</span>
                                 </span>
                                 <span class="toolbarIcons">
-                                <span class="vijestOutreachIcon"></span>
+                                   
+                                 <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops1"><i class="fa fa-share-alt" aria-hidden="true" ></i></a>
                                 <span class="count">12345</span>
                                 <i class="fa fa-print" aria-hidden="true"></i>
                                 <i class="fa fa-bookmark" aria-hidden="true"></i>
@@ -478,7 +487,7 @@
                                     </ul>
                                 </div>
                                 <span class="preuzmiDoc">PODIJELI:  </span>
-                                <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops"></a>
+                                <a tabindex="0" class=" vijestOutreachIcon" role="button" data-toggle="popover" data-trigger="focus" data-placement="top" data-style="mypops" id="Pops"><i class="fa fa-share-alt" aria-hidden="true" ></i></a>
                                 <span class="count">12345</span>
                                 <i class="fa fa-print" aria-hidden="true"></i> <span class="preuzmiDoc">SAČUVAJ:</span>
                                 <i class="fa fa-bookmark" aria-hidden="true"></i>
