Added "vidi više" link for Kursna lista widget

--- a/index.html
+++ b/index.html
@@ -719,9 +719,9 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <!--   <div class="card-count-label">
-                                    <p>100</p>
-                                </div> -->
+                                <div class="card-vise">
+                                    <p><a><i class="fa fa-plus" aria-hidden="true"></i> Vidi više</a></p>
+                                </div>
                             </div>
                         </div>
 
