Animating tender icons.

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="col-sm-12">
+                                    <div class="col-sm-12 nopadding">
                                         <a href="#" class="card-button" onclick="$(this).closest('form').submit()">
                                             <span class="card-button-ikona"><i class="fa fa-ban" aria-hidden="true"></i></span><span class="card-button-tekst">Izračunaj</span></a>
                                     </div>
